Rename to datatap
Change-Id: I67ac112f5d9b472d4623950aede0b5fa0628e03d

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -5,13 +5,13 @@
 	"reportUnusedVariable": "information",
 	"stubPath": "./typings",
 	"include": [
-		"mldl_public/api",
-		"mldl_public/dataset",
-		"mldl_public/droplet",
-		"mldl_public/geometry",
-		"mldl_public/metrics",
-		"mldl_public/template",
-		"mldl_public/utils",
+		"datatap/api",
+		"datatap/dataset",
+		"datatap/droplet",
+		"datatap/geometry",
+		"datatap/metrics",
+		"datatap/template",
+		"datatap/utils",
 		"tests"
 	]
 }
