Prepare datatap-python for public release
Change-Id: If4f96b66bbc251e3f54f2e0ed595485ff46633d7

--- a/buildkite.yml
+++ b/buildkite.yml
@@ -35,3 +35,9 @@ steps:
     commands:
       - "python3.7 setup.py bdist_wheel upload -r zensors"
     if: build.branch == "master"
+
+  - label: ":github: Pushing to github"
+    commands:
+      - "git remote add origin git@github.com:Zensors/datatap-python.git || true"
+      - "git push origin ${BUILDKITE_BRANCH}"
+    if: "build.branch !~ /^refs/"
