Add CI for pypi distribution
Change-Id: I91184a0d89394a8840d6a2515c003b62bdd86ae3

--- a/buildkite.yml
+++ b/buildkite.yml
@@ -34,6 +34,7 @@ steps:
   - label: ":package: Building and Pushing Wheel"
     commands:
       - "python3.7 setup.py bdist_wheel upload -r zensors"
+      - "python3.7 setup.py bdist_wheel upload -r datatap"
     if: build.branch == "master"
 
   - label: ":package: Building and Pushing Documentation"
