[HOTFIX] The fix was bogus as it turns out; skip tests
Change-Id: I7ac05dad5e6f91ce7a79773fa46258a0dafdfe61

--- a/buildkite.yml
+++ b/buildkite.yml
@@ -63,6 +63,6 @@ steps:
 
   - label: ":github: Pushing to github"
     commands:
-      - "yes | git remote add gh git@github.com:Zensors/datatap-python.git || true"
+      - "git remote add gh git@github.com:Zensors/datatap-python.git || true"
       - "git push gh ${BUILDKITE_BRANCH}"
     if: "build.branch !~ /^refs/"
