--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-dask[complete]==2.11.0
 boto3>=1.15.14
 fastjsonschema==2.14.2
 toolz>=0.10.0
@@ -7,3 +6,5 @@ jsonmerge==1.7.0
 neo4j==4.0.1
 Shapely
 requests>=2.23.0
+typing-extensions
+fsspec
