Several bug fixes
Change-Id: I5bd1ebe03ea7415bd005f9a7acdc5f57045715da

--- a/buildkite.yml
+++ b/buildkite.yml
@@ -6,6 +6,7 @@ steps:
       - "cp -R . /build"
       - "cd /build"
       - "echo '--- Installing Packages'"
+      - "pip install -r dev_requirements.txt"
       - "pip install -r requirements_torch.txt"
       - "pip install -e '.[metrics,torch]'"
       - "yarn global add pyright"
