--- a/requirements_torch.txt
+++ b/requirements_torch.txt
@@ -1,4 +1,2 @@
---pre
--f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
-torch>=1.8.0.dev20201021+cpu
-torchvision>=0.8.0.dev20201021+cpu
+torch>=1.8.0+cpu
+torchvision>=0.9.0+cpu
