Add metadata to ImageAnnotation
Change-Id: I3c53a91d52f6443a4ae791690b52d20d12a5ad56

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -10,10 +10,10 @@
 		"datatap/dataset",
 		"datatap/droplet",
 		"datatap/geometry",
-		"datatap/metrics",
+		// "datatap/metrics",
 		"datatap/template",
 		"datatap/utils",
-		"examples",
-		"tests"
+		// "examples",
+		// "tests"
 	]
 }
